<resources>
    <string name="app_name">group_chat</string>


    <!--
    Login Strings
    -->

    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="create">Create Account</string>
    <string name="jane">Jane Doe</string>
    <string name="email_ex">jane@example.com</string>


    <!--
    Main Activity Strings
    -->

    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="chat_sample">Roomies</string>
    <string name="chat_thumbnail_description">Chat Thumbnail</string>
    <string name="contact_sample">Jane Doe</string>
    <string name="contact_thumbnail_description">User Icon</string>
    <string name="action_signout">Sign Out</string>

    <!--
    Add Contact Strings
    -->

    <string name="dialog_title">Add New Contact</string>
    <string name="prompt">Enter A Username To Search User</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="user_not_found">User Not Fount</string>

</resources>
