<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_input"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_border">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text = "@string/login"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            android:layout_below="@id/title"
            android:ems="9"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:hint="@string/email"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:layout_below="@id/email_field"
            android:ems="9"
            android:hint="@string/pass"
            android:textSize="14sp"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:layout_marginTop="25dp"
            android:layout_alignRight="@id/password_field"
            android:layout_alignEnd="@id/password_field"
            android:text="@string/login"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            android:onClick="login"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_below="@id/reg_input"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:text="@string/register"
        android:onClick="register"
        />




</RelativeLayout>