<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/duplicate_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Username unavailable!!"
        android:layout_above="@id/reg_input"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_input"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_border">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text = "Register"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_field"
            android:layout_below="@id/title"
            android:ems="9"
            android:textSize="14dp"
            android:hint="@string/name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            android:layout_below="@id/name_field"
            android:ems="9"
            android:textSize="14dp"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_field"
            android:layout_below="@id/email_field"
            android:ems="9"
            android:textSize="14dp"
            android:hint="Username"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:layout_below="@id/user_field"
            android:ems="9"
            android:textSize="14dp"
            android:hint="@string/pass"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:layout_marginTop="25dp"
            android:layout_alignRight="@id/password_field"
            android:text="@string/create"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            android:onClick="register"/>
    </RelativeLayout>



</RelativeLayout>